--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-.backgroundDiv {
-  background-color: rgb(61, 109, 165);
+html {
+  background-color: rgb(0, 118, 173);
 }
 
 .App {
@@ -11,57 +11,108 @@
   border: rgb(0, 0, 0);
   border-style: solid;
   max-width: 800px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 header {
-  border: solid;
   margin: 15px;
   text-align: center;
+  background-color: rgb(0, 0, 0);
 }
 
+.header {
+  color: bisque;
+  text-decoration: none;
+}
+
+.link {
+  color: bisque;
+  text-decoration: none;
+}
+
+.link button {
+  height: 35px;
+}
+
+.link:hover {
+  color: darkgray;
+}
 .main {
   display: flex;
 }
 
 .folders {
   flex: 1;
-  border-style: solid;
   margin: 10px;
-  background-color: rgba(97, 48, 48, 0.315);
+  margin-bottom: 40px;
+  padding-top: 40px;
+  padding: 10px;
+  background-color: black;
+  overflow-y: scroll;
+  min-width: 75px;
+}
+
+.folder:hover {
+  background-color: rgba(104, 68, 16, 0.753);
 }
 
 .folder {
   display: flex;
-  flex-direction: column;
-  border-style: solid;
-  margin: 10px;
-  margin-right: 40px;
-  font-size: 20px;
-  padding: 15px;
-  padding-left: 30px;
-  background-color: rgba(255, 235, 205, 0.26);
+  margin: auto;
+  margin-bottom: 10px;
+  background-color: rgb(153, 131, 90);
+  margin-left: -20px;
+  margin-right: -3px;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 13px;
+}
+
+ul {
+  padding-inline-start: 15px;
 }
 
 .noteList {
-  display: flex;
   flex: 2;
-  flex-direction: column;
-  padding: 5px;
+  max-height: 500px;
+  min-height: 500px;
   margin: 10px;
+  margin-bottom: 40px;
+  padding-top: 40px;
+  padding: 10px;
+  background-color: black;
+  overflow-y: scroll;
 }
 
 .noteBox {
-  border-style: solid;
-  margin: 20px;
+  margin: 6px;
   margin-bottom: 5px;
   margin-top: 5px;
+  margin-left: -10px;
+  background-color: rgb(204, 136, 9);
+  padding: 5px;
+  font-size: 13px;
+}
+
+.noteBox:hover {
+  background-color: rgb(151, 100, 4);
 }
 
 .AddNoteBox {
-  border-style: solid;
-  margin: 20px;
+  margin: auto;
   margin-bottom: 5px;
   margin-top: 5px;
+  text-align: center;
+  text-decoration: none;
+  background-color: rgb(0, 212, 0);
+  color: bisque;
+  font-weight: bolder;
+  max-width: 100px;
+  padding: 5px;
+}
+
+.AddNoteBox:hover {
+  background-color: red;
 }
 
 .addNoteForm {
@@ -71,8 +122,9 @@ header {
   max-width: 200px;
   margin: auto;
   padding: 10px;
-  color: rgb(140, 169, 194);
-  border-style: solid;
+  color: bisque;
+  background-color: black;
+  margin-bottom: 50px;
 }
 
 .formEls {
@@ -107,4 +159,35 @@ ul {
 
 button {
   cursor: pointer;
+}
+
+.folderGoBack {
+  margin: auto;
+}
+
+.folderAdd {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 200px;
+  margin: auto;
+  padding: 40px;
+  color: bisque;
+  background-color: black;
+  margin-bottom: 50px;
+}
+
+.folderAdd input {
+  margin: 10px;
+}
+
+.submit {
+  margin-bottom: 30px;
+}
+
+.noteBoxExpanded {
+  padding: 30px;
+  color: bisque;
+  background-color: black;
+  margin: 20px;
 }
