--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html {
-  background-color: rgb(0, 118, 173);
+  background-color: rgb(160, 225, 255);
 }
 
 .App {
@@ -26,7 +26,7 @@ header {
 }
 
 .link {
-  color: bisque;
+  color: rgb(255, 255, 255);
   text-decoration: none;
 }
 
@@ -35,7 +35,7 @@ header {
 }
 
 .link:hover {
-  color: darkgray;
+  color: rgb(199, 0, 0);
 }
 .main {
   display: flex;
@@ -60,7 +60,8 @@ header {
   display: flex;
   margin: auto;
   margin-bottom: 10px;
-  background-color: rgb(153, 131, 90);
+  background-color: rgb(231, 199, 139);
+  color: black;
   margin-left: -20px;
   margin-right: -3px;
   padding: 10px;
@@ -90,6 +91,7 @@ ul {
   margin-top: 5px;
   margin-left: -10px;
   background-color: rgb(204, 136, 9);
+  color: black;
   padding: 5px;
   font-size: 13px;
 }
@@ -104,15 +106,15 @@ ul {
   margin-top: 5px;
   text-align: center;
   text-decoration: none;
-  background-color: rgb(0, 212, 0);
-  color: bisque;
+  background-color: rgb(0, 41, 0);
+  color: rgb(255, 255, 255);
   font-weight: bolder;
   max-width: 100px;
   padding: 5px;
 }
 
 .AddNoteBox:hover {
-  background-color: red;
+  background-color: rgb(129, 0, 0);
 }
 
 .addNoteForm {
